--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Developer & Human
 logo: tim-morton-200.jpg
 search: true
-url: http://localhost:4000
+url: http://tmorton.github.io
 
 # Jekyll configuration
 
